# AI-Car-Racing

./: .gitignore  README.md  Train_DQN.py  Wrapper_DQN.py  collect_bc_data.py  environment.py  environment_framestacking.py  experiment_sb3_run.py  main.py  pyproject.toml
bc/: bc_pretrain.py  collect_bc_data.py  combine_bc_data.py  experiment_bc_run.py  explore-data.ipynb
ppo_implementation/: agent_ppo.py  arguments.py  car_racing_env.py  car_racing_env_v2.py  eval_ppo.py  main_ppo.py  observations.txt  ppo_network.py  requirements.txt  run_ppo.sh
