[project]
name = "rl-final-group-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[box2d,other]>=1.2.2",
    "moviepy>=2.2.1",
    "stable-baselines3>=2.7.0",
    "swig>=4.4.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
]
