[project]
name = "rl-final-group-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[box2d,other]>=1.2.2",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "pyqt6>=6.10.0",
    "stable-baselines3>=2.7.0",
    "swig>=4.4.0",
    "torch>=2.9.1",
    "moviepy>=2.2.1",
    "stable-baselines3>=2.7.0",
    "swig>=4.4.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
]
